src/objects/Detox_Client__c.object
<CustomObject>
    <fields>
        <fullName>Attending_mental_health_professional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the individual currently attending a professional for mental health reasons please enter their contact details as a Contact and link to them here</inlineHelpText>
        <label>Attending mental health professional</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Detox Clients (Attending mental health professional)</relationshipLabel>
        <relationshipName>Detox_Clients_Mental_Health_Professional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <inlineHelpText>This name will not be visible to Ana Liffey</inlineHelpText>
        <label>Client Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clients_wants_a_Community_Detox_from__c</fullName>
        <label>Clients wants a Community Detox from</label>
        <picklist>
            <picklistValues>
                <fullName>Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazapeines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z-Hypnotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codeine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Medication__c</fullName>
        <inlineHelpText>Is the individual presently on any medication for mental health reasons? If so please include details (what medication, dosage details)</inlineHelpText>
        <label>Current Medication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_clinical_record_completed__c</fullName>
        <label>Date clinical record completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_they_have_any_issues_during_detox__c</fullName>
        <label>Did they have any issues during detox</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Detox Clients</relationshipLabel>
        <relationshipName>Detox_Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>History_of_seizures__c</fullName>
        <inlineHelpText>Does the service user has a history of seizures? If yes please include details</inlineHelpText>
        <label>History of seizures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Housing_Situation__c</fullName>
        <label>Housing Situation</label>
        <picklist>
            <picklistValues>
                <fullName>1. Stable Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Institution(prison/residential care/halfway house)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Homeless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Other unstable accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_other_substance_please_state__c</fullName>
        <label>If other substance, please state</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Worker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Detox Clients (Key Worker)</relationshipLabel>
        <relationshipName>Detox_Clients_Key_Worker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_time_attempted_detoxification__c</fullName>
        <label>Last time attempted detoxification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nationality</label>
        <referenceTo>ecass01__Nations__c</referenceTo>
        <relationshipLabel>Detox Clients</relationshipLabel>
        <relationshipName>Detox_Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <picklist>
            <controllingField>Children__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_times_attempted_detoxification__c</fullName>
        <label>Number of times attempted detoxification</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_community_detox_for__c</fullName>
        <inlineHelpText>If the service user has attempted community detox in the past please state which substance it was for</inlineHelpText>
        <label>Past community detox for</label>
        <picklist>
            <picklistValues>
                <fullName>Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazapeines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z-Hypnotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codeine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Previous_detox_history__c</fullName>
        <label>Previous detox history</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-detox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community detox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No attempts at detoxification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_mental_illness__c</fullName>
        <inlineHelpText>Has the individual suffered from mental illness in the past? If so please include the information (how long ago, were they on medication, is it on going, were they hospitalised?)</inlineHelpText>
        <label>Previous mental illness</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reasons_detoxification_did_not_work__c</fullName>
        <inlineHelpText>Reasons they feel detoxification did not work for them</inlineHelpText>
        <label>Reasons detoxification did not work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Substances_currently_used__c</fullName>
        <label>Substances currently used</label>
        <picklist>
            <picklistValues>
                <fullName>Heroin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non prescribed Benzodiazepine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescribed Benzodiazepine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine/Crack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannabis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non prescribed Zimovane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescribed Zimovane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non prescribed Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescribed Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mephedrone (Snow Blow)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lsd/Acid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other sedatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methamphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Withdrawal_symptoms_during_past_detox__c</fullName>
        <inlineHelpText>Withdrawal symptoms they experienced during detoxification in the past</inlineHelpText>
        <label>Withdrawal symptoms during past detox</label>
        <type>TextArea</type>
    </fields>
    <label>Detox Client</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Client_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Detox Client Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detox Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>